@@ -1,3 +1,7 @@
+2007-0723   Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Bump GTK+ requirement to 2.11.6
+
 2007-07-19  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: fix last commit when building without gstreamer
